--- a/blog-row.html
+++ b/blog-row.html
@@ -12,6 +12,12 @@
 
 <!-- LB -->
 <div class='entry'>
+<h2 id='try-2'>Try 2</h2>
+<small>[<a href='#try-2'>link</a>&mdash;<a href='blog/try-2.html'>standalone</a>]</small>
+try 2
+<small>Wed, 27 Feb 2019 17:32:41 +0000</small>
+</div>
+<div class='entry'>
 <h2 id='try'>Try</h2>
 <small>[<a href='#try'>link</a>&mdash;<a href='blog/try.html'>standalone</a>]</small>
 ayyyyyyyyy fam
