--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,7 @@
 
 		<p>Subscribe to the blog by using <a href="rss.xml">this RSS link</a>.</p>
 		<!-- LB -->
+<li>2019 Feb 27 &ndash; <a href="blog/try-2.html">Try 2</a></li>
 
 		</br>
 		<big>
