--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Luke's Blog Index</title>
+		<title>primity's's Blog</title>
 		<link rel='stylesheet' type='text/css' href='style.css'>
 		<meta charset="utf-8"/>
 	</head>
@@ -10,18 +10,16 @@
 	<body>
 
 		<h1>
-			<img src="pix/icons/blog.svg" alt="blog icon">
 			<a href="index.html">Luke</a>'s Blog Index</h1>
 
-		<p>For a rolling view of this blog, check out <a href="blog.html">this page</a>.
 
 		<p>Subscribe to the blog by using <a href="rss.xml">this RSS link</a>.</p>
 		<!-- LB -->
-<li>2019 Feb 27 &ndash; <a href="blog/try-2.html">Try 2</a></li>
+
+		<li>2019 Feb 27 &ndash; <a href="blog/try-2.html">Try 2</a></li>
 
 		</br>
 		<big>
-			<img src="/pix/lukesmall.gif" alt="Luke">
 			<a href="/index.html">Return to main page</a></big>
 
 
