blog first version

--- a/blog.html
+++ b/blog.html
@@ -10,19 +10,17 @@
 	<body>
 
 		<h1>
-			<a href="index.html">Luke</a>'s Blog Index</h1>
+			<a href="index.html">primity</a>'s Blog</h1>
 
 
-		<p>Subscribe to the blog by using <a href="rss.xml">this RSS link</a>.</p>
+		<!--<p>Subscribe to the blog by using <a href="rss.xml">this RSS link</a>.</p>-->
 		<!-- LB -->
-<li>2019 Feb 27 &ndash; <a href="blog/try3.html">try3</a></li>
 
-		<li>2019 Feb 27 &ndash; <a href="blog/try-2.html">Try 2</a></li>
+<li>2019 Feb 27 &ndash; <a href="blog/first-post-simple-placeholder.html">First Post - Simple Placeholder</a></li>
+
 
 		</br>
 		<big>
-			<a href="/index.html">Return to main page</a></big>
-
 
 	</body>
 </html>
