--- a/blog.html
+++ b/blog.html
@@ -14,9 +14,10 @@
 
 
 		<!--<p>Subscribe to the blog by using <a href="rss.xml">this RSS link</a>.</p>-->
+		<h2>2019</h2>
 		<!-- LB -->
+<li> Feb 27 &ndash; <a href="blog/moment.html">Moment</a></li>
 
-<li>2019 Feb 27 &ndash; <a href="blog/first-post-simple-placeholder.html">First Post - Simple Placeholder</a></li>
 
 
 		</br>
