--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		<title>primity's's Blog</title>
-		<link rel='stylesheet' type='text/css' href='style.css'>
+		<link rel='stylesheet' type='text/css' href='style-blog.css'>
 		<meta charset="utf-8"/>
 	</head>
 
