--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>primity's's Blog</title>
+		<title>João Louro's blog</title>
 		<link rel='stylesheet' type='text/css' href='blog-style.css'>
 		<meta charset="utf-8"/>
 	</head>
