--- a/blog-row.html
+++ b/blog-row.html
@@ -2,7 +2,7 @@
 <head>
 <title>Blog</title>
 <meta charset="utf-8"/>
-<link rel='stylesheet' type='text/css' href='style.css'>
+<link rel='stylesheet' type='text/css' href='blog-style.css'>
 </head>
 
 <body>
