--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 	<body>
 
 		<h1>
-			<a href="index.html">primity</a>'s Blog</h1>
+			<a href="index.html">João Louro's blog</h1>
 
 
 		<!--<p>Subscribe to the blog by using <a href="rss.xml">this RSS link</a>.</p>-->
