--- a/blog.html
+++ b/blog.html
@@ -15,9 +15,16 @@
 
 		<!--<p>Subscribe to the blog by using <a href="rss.xml">this RSS link</a>.</p>-->
 		<h2>2019</h2>
+		<ul>
 		<!-- LB -->
+<li> Mar 01 &ndash; <a href="blog/shady-business-in-the-herbicide-industy.html"></a></li>
+<li> Mar 01 &ndash; <a href="blog/">Options +Indexes
+10
+Moment
+Shady Business in the Herbicide Industry?</a></li>
+<li> Mar 01 &ndash; <a href="blog/shady-business-in-the-herbicide-industry.html">Shady Business in the Herbicide Industry?</a></li>
 <li> Feb 27 &ndash; <a href="blog/moment.html">Moment</a></li>
-
+		</ul>
 
 
 		</br>
