changed cv name

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>You can read about my early work applying machine learning to public policy problems <a href="https://louro.xyz/ml-public-policy.pdf">here</a>.</p>
 
         <footer>
-            <p style="text-align:center"><a href="https://github.com/fernandeslouro">GitHub</a> - <a href="https://louro.xyz/cv-eeml.pdf">CV</a> - <a href="https://www.linkedin.com/in/fernandeslouro/">Linkedin</a> - <a href="mailto:jd.louro@outlook.pt">E-mail</a></p>
+            <p style="text-align:center"><a href="https://github.com/fernandeslouro">GitHub</a> - <a href="https://louro.xyz/cv.pdf">CV</a> - <a href="https://www.linkedin.com/in/fernandeslouro/">Linkedin</a> - <a href="mailto:jd.louro@outlook.pt">E-mail</a></p>
         </footer>
     </body>
 </html>
