--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0"/>
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
         <title>João Louro</title>
         <meta name="description" content="Data Scientist"/>
         <link rel="canonical" href="http://louro.xyz"/>
