--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <header>
             <h1 style="text-align:center">João Diogo Fernandes Louro</h1>
         </header>
-        <p>Data Scientist currently living in the Lisbon area. I work at <a href="https://feedzai.com">Feedzai</a>, a cool startup recently ranked #15 on Forbes' <a href="https://tecnico.ulisboa.pt/en/">AI 50: America's Most Promising AI Companies</a>. I have a MSc in Avionics/Electronics, and a BSc in Aerospace Engineering, both from <a href="https://tecnico.ulisboa.pt/en/">Instituto Superior Técnico</a>.</p>
-        <p>You can read about my early work applying machine learning to public policy problems <a href="https://louro.xyz/ml-public-policy.pdf">here</a>.</p>
+        <p>Data Scientist currently living in the Lisbon area. I've previously worked at <a href="https://feedzai.com">Feedzai</a>, a cool startup recently ranked #15 on Forbes' <a href="https://tecnico.ulisboa.pt/en/">AI 50: America's Most Promising AI Companies</a>. I have a MSc in Avionics/Electronics, and a BSc in Aerospace Engineering, both from <a href="https://tecnico.ulisboa.pt/en/">Instituto Superior Técnico</a>.</p>
+        <p>You can read about my early work applying machine learning to public policy problems <a href="https://louro.xyz/ml-public-policy.pdf">here</a>, or take a look at my <a href="https://blog.louro.xyz">blog</a>.</p>
 
         <footer>
             <p style="text-align:center"><a href="http://blog.louro.xyz">Blog</a> - <a href="https://github.com/fernandeslouro">GitHub</a> - <a href="https://louro.xyz/cv.pdf">CV</a> - <a href="https://www.linkedin.com/in/fernandeslouro/">Linkedin</a> - <a href="mailto:jd.louro@outlook.pt">E-mail</a></p>
