--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header>
             <h1 style="text-align:center">João Diogo Fernandes Louro</h1>
         </header>
-        <p>Data Scientist currently living in the Lisbon area. I've previously worked at <a href="https://feedzai.com">Feedzai</a>, a cool startup recently ranked #15 on Forbes' <a href="https://tecnico.ulisboa.pt/en/">AI 50: America's Most Promising AI Companies</a>. I have a MSc in Avionics/Electronics, and a BSc in Aerospace Engineering, both from <a href="https://tecnico.ulisboa.pt/en/">Instituto Superior Técnico</a>.</p>
+        <p>Data Scientist currently living in the Lisbon area. I've previously worked at <a href="https://feedzai.com">Feedzai</a>, a cool startup recently ranked #15 on Forbes' <a href="https://tecnico.ulisboa.pt/en/">AI 50: America's Most Promising AI Companies</a>, and I was a <a href="https://www.dssgfellowship.org/europe/">Data Science for Social Good</a> Fellow. I have a MSc in Avionics/Electronics, and a BSc in Aerospace Engineering, both from <a href="https://tecnico.ulisboa.pt/en/">Instituto Superior Técnico</a>.</p>
         <p>You can read about my early work applying machine learning to public policy problems <a href="https://louro.xyz/ml-public-policy.pdf">here</a>, or take a look at my <a href="https://blog.louro.xyz">blog</a>.</p>
 
         <footer>
