--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <h1 style="text-align:center">João Diogo Fernandes Louro</h1>
         </header>
-        <p>Data Scientist currently living in the Lisbon area. Currently working on detecting underwater mines using sonar signals at <a href="https://gmv.com">GMV</a> I've previously worked at <a href="https://feedzai.com">Feedzai</a>, a fraud detection startup, and I was a <a href="https://www.dssgfellowship.org/europe/">Data Science for Social Good</a> Fellow. I also have a MSc in Avionics/Electronics, and a BSc in Aerospace Engineering, both from <a href="https://tecnico.ulisboa.pt/en/">Instituto Superior Técnico</a>.</p>
+        <p>Data Scientist currently living in the Lisbon area. Currently working on underwater mines' detection using sonar signals at <a href="https://gmv.com">GMV</a>. I've previously worked at <a href="https://feedzai.com">Feedzai</a>, a fraud detection startup, and I was a <a href="https://www.dssgfellowship.org/europe/">Data Science for Social Good</a> Fellow. I also have a MSc in Avionics/Electronics, and a BSc in Aerospace Engineering, both from <a href="https://tecnico.ulisboa.pt/en/">Instituto Superior Técnico</a>.</p>
         <p>You can read about my early work applying machine learning to public policy problems <a href="https://louro.xyz/ml-public-policy.pdf">here</a>, or take a look at my <a href="https://blog.louro.xyz">blog</a>.</p>
 
         <footer>
