--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <h1 style="text-align:center">João Diogo Fernandes Louro</h1>
         </header>
-	<p>Sofware Engineer working at <a href="https://strypes.pt/">Strypes</a>, developing infrastructure to semiconductors. Previously worked on underwater mines' detection using sonar signals at <a href="https://gmv.com">GMV</a> and fought fraud at <a href="https://feedzai.com">Feedzai</a>. I was a <a href="https://www.dssgfellowship.org/europe/">Data Science for Social Good</a> Fellow and I have a MSc in Avionics/Electronics, and a BSc in Aerospace Engineering, both from <a href="https://tecnico.ulisboa.pt/en/">Instituto Superior Técnico</a>.</p>
+	<p>Software Engineer at <a href="https://strypes.pt/">Strypes</a>. Previously worked on underwater mines' detection using sonar signals at <a href="https://gmv.com">GMV</a> and fought fraud at <a href="https://feedzai.com">Feedzai</a>. I was a <a href="https://www.dssgfellowship.org/europe/">Data Science for Social Good</a> Fellow and I have a MSc in Avionics/Electronics, and a BSc in Aerospace Engineering, both from <a href="https://tecnico.ulisboa.pt/en/">Instituto Superior Técnico</a>.</p>
         <p>You can read about my early work applying machine learning to public policy problems <a href="https://louro.xyz/ml-public-policy.pdf">here</a>, or take a look at my <a href="https://blog.louro.xyz">blog</a>.</p>
 
         <footer>
